--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-Amy and Simon
-
-30th July 2023
-
-Website coming soon...
+Amy and Simon<br>
+30th July 2023<br>
+Website coming soon...<br>
 </html>
