--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ body {
 }
 
 .box {
-	border-radius: 3px;
-	background: rgba(101, 101, 101, 0.5); margin: auto; padding: 12px;
+	border-radius: 20px;
+	background: rgba(101, 101, 101, 0.6); margin: auto; padding: 12px;
 }
 
 .lightbox {
@@ -101,8 +101,8 @@ div.vertical {
 			<div class="vertical">
 				<div class="box">
 					<p class="p1">Use Amy's surname in the box below to enter...</p>
-					<input style="margin: 16px; text-align: center; font-family: 'Roboto', sans-serif;" id="password" type="password" placeholder="password" /> <br />
-					<button style="font-family: 'Roboto', sans-serif;" id="loginbutton" type="button">Enter</button>
+					<input style="margin: 16px; text-align: center; font-family: 'Roboto', sans-serif; padding: 5px;" id="password" type="password" placeholder="password" /> <br />
+					<button style="font-family: 'Roboto', sans-serif; padding: 1px;" id="loginbutton" type="button">Enter</button>
 					<p id="wrongPassword" style="display: none">wrong password</p>
 				</div>
 			</div>
