--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ div.vertical {
 		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
-					<p class="p1">Use Amy's surname in the box below to enter...</p>
+					<p class="p1">Please use Amy's surname in the box below to enter...</p>
 					<input style="margin: 16px; text-align: center; font-family: 'Roboto', sans-serif; padding: 5px;" id="password" type="password" placeholder="password" /> <br />
 					<button style="font-family: 'Roboto', sans-serif; padding: 1px;" id="loginbutton" type="button">Enter</button>
 					<p id="wrongPassword" style="display: none">wrong password</p>
