--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -1,1 +1,20 @@
-Amy and Simon
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Amy and Simon</title>
+</head>
+<body>
+	Website coming soon!!
+	<header>
+		<div id=preview>
+			<section id=intro>
+				
+			</section>
+			
+		</div>
+	</header>
+
+</body>
+</html>
