--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -6,7 +6,7 @@
 	<title>Amy and Simon</title>
 </head>
 <body>
-	Website coming soon!!
+	Website will be launched 13/02/2023
 	<header>
 		<div id=preview>
 			<section id=intro>
