--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -257,7 +257,7 @@
 			<div class="footer">
 				<div class="container">					
 					<div class="copy-text text-center">
-						<p>Amy and Simon | We look forward to seeing you!</p>
+						<p>We look forward to seeing you! | Amy and Simon</p>
 					</div>											
 				</div>						
 			</div>	
