--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -109,7 +109,7 @@
 									<br>
 									<br>
 									<div class="about_content_area wow fadeInRight">
-									<p>After our ceremony, our wedding reception will take place at Hampton Manor, in Henley-on-Arden.
+									<p>After our ceremony, our wedding reception will take place at Hampton Manor, in Hampton-in-Arden.
 									<div class="about_details">
 										<div class="row">
 											<div class="col-md-12">
