--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -62,7 +62,15 @@
 								<p>Welcome to our wedding website.
 							</div>
 						</div>
-						
+					</div>
+				</div>
+			</section>
+
+			<section id="home" class="main_banner banner_bgright">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 col-sm-12 col-xs-12">
+						</div>
 					</div>
 				</div>
 			</section>
@@ -199,7 +207,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Are you having an unplugged wedding?</h4>
-								<P>We’ve asked a professional photographer and videographer to capture the special moments on our day. We ask that you turn off your phones and cameras at the church, so that you can be fully present during our ceremony.Our beautiful images will be available after the wedding.
+								<P>We’ve asked a professional photographer and videographer to capture the special moments on our day. <br> We ask that you turn off your phones and cameras at the church, so that you can be fully present during our ceremony. <br>Our beautiful images will be available after the wedding.
 							</div>
 						</div> <!-- End Col -->
 
@@ -207,7 +215,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How can I travel to the chuch?</h4>
-								<P>The church is located on Lichfield Road, in Sutton Coldfield. There is parking available at the Church and a further car park is available opposite the church at Bishop Vesey School on Boswell Road.
+								<P>The church is located on Lichfield Road, in Sutton Coldfield. There is parking available at the Church and a further car park is available opposite the church at Bishop Vesey School on Boswell Road. <br>
 								<P>If you are travelling by Train, Sutton Coldfield Train station is the nearest station, and is a 10 minute walk, or short taxi ride away. </P>
 							</div>
 						</div> <!-- End Col -->
@@ -216,7 +224,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How can I travel to Hampton Manor?</h4>
-								<P>Located on the edge of the Warwickshire countryside, Hampton Manor is a short drive off the M42. The drive from the Church should take around 35 minutes. There is plenty of parking at Hampton Manor, where cars can be left overnight.
+								<P>Located on the edge of the Warwickshire countryside, Hampton Manor is a short drive off the M42. <br>The drive from the Church should take around 35 minutes. There is plenty of parking at Hampton Manor, where cars can be left overnight.
 									<p>If you are travelling by train, Hampton-in-Arden train station is a 5 minute walk from Hampton Manor. 
 							</div>
 						</div> <!-- End Col -->
