--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -62,15 +62,7 @@
 								<p>Welcome to our wedding website.
 							</div>
 						</div>
-					</div>
-				</div>
-			</section>
-
-			<section id="home" class="main_banner banner_bgright">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-sm-12 col-xs-12">
-						</div>
+						
 					</div>
 				</div>
 			</section>
@@ -187,6 +179,7 @@
 							</div>
 						</div> <!-- End Col -->
 
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How should I RSVP?</h4>
@@ -194,12 +187,14 @@
 							</div>
 						</div> <!-- End Col -->
 
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Where can I stay?</h4>
 								<P><a href="https://secure.hotels.uk.com/bookings/#/booking/28164/items/availability?from=2023-07-30&to=2023-07-31&k=ejKnmopkvv6tGReTZU1xurHsF">The White Lion Inn</a> is located in Hampton-in-Arden and is a 5 minute walk from Hampton Manor. Alternatively, there are multiple hotels at the <a href=2https://www.booking.com/searchresults.en-us.html?ss=NEC+Birmingham%2C+Bickenhill%2C+West+Midlands%2C+United+Kingdom&ssne=B92+0EN&ssne_untouched=B92+0EN&label=gen173nr-1FCAEoggI46AdIM1gEaFCIAQGYATG4ARfIAQzYAQHoAQH4AQKIAgGoAgO4Aurfo58GwAIB0gIkMWZjZDI0N2QtYmFiNS00MzkyLWI0ZGMtYTEzZjI0ZDZjMTdl2AIF4AIB&aid=304142&lang=en-us&sb=1&src_elem=sb&src=searchresults&dest_id=9405&dest_type=landmark&ac_position=0&ac_click_type=b&ac_langcode=en&ac_suggestion_list_length=5&search_selected=true&search_pageview_id=ee7c62009f2800dd&ac_meta=GhBlZTdjNjIwMDlmMjgwMGRkIAAoATICZW46A05FQ0AASgBQAA%3D%3D&checkin=2023-07-30&checkout=2023-07-31&group_adults=2&no_rooms=1&group_children=0&sb_travel_purpose=leisure">NEC and Birmingham Airport</a>, which is a short taxi ride away. </P>
 							</div>
 						</div> <!-- End Col -->
+						<div class="row text-center">
 						
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
@@ -208,6 +203,7 @@
 							</div>
 						</div> <!-- End Col -->
 
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How can I travel to the chuch?</h4>
@@ -216,7 +212,7 @@
 							</div>
 						</div> <!-- End Col -->
 
-
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How can I travel to Hampton Manor?</h4>
@@ -225,7 +221,7 @@
 							</div>
 						</div> <!-- End Col -->
 
-
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Should I bring a gift?</h4>
@@ -234,6 +230,7 @@
 						</div> <!-- End Col -->
 
 
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>What is the schedule for the day?</h4>
@@ -242,6 +239,7 @@
 							</div>
 						</div> <!-- End Col -->
 
+						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Are children invited?</h4>
