--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -170,82 +170,79 @@
 								<h4>What is the dress code</h4>
 								<P>The dress code for our wedding is Formal</P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>What time will the ceremony start?</h4>
 								<P>We ask guests to arrive at the Church no later than 12:30pm</P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
 
-						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How should I RSVP?</h4>
 								<P>To RSVP, please send an mail to: <br><a href="mailto:wedding@amyandsimon.com">wedding@amyandsimon.com</a><br>To help our planning, please include any dietary requirements</P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
+					</div>
 
-						<div class="row text-center">
+					<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Where can I stay?</h4>
 								<P><a href="https://secure.hotels.uk.com/bookings/#/booking/28164/items/availability?from=2023-07-30&to=2023-07-31&k=ejKnmopkvv6tGReTZU1xurHsF">The White Lion Inn</a> is located in Hampton-in-Arden and is a 5 minute walk from Hampton Manor. Alternatively, there are multiple hotels at the <a href=2https://www.booking.com/searchresults.en-us.html?ss=NEC+Birmingham%2C+Bickenhill%2C+West+Midlands%2C+United+Kingdom&ssne=B92+0EN&ssne_untouched=B92+0EN&label=gen173nr-1FCAEoggI46AdIM1gEaFCIAQGYATG4ARfIAQzYAQHoAQH4AQKIAgGoAgO4Aurfo58GwAIB0gIkMWZjZDI0N2QtYmFiNS00MzkyLWI0ZGMtYTEzZjI0ZDZjMTdl2AIF4AIB&aid=304142&lang=en-us&sb=1&src_elem=sb&src=searchresults&dest_id=9405&dest_type=landmark&ac_position=0&ac_click_type=b&ac_langcode=en&ac_suggestion_list_length=5&search_selected=true&search_pageview_id=ee7c62009f2800dd&ac_meta=GhBlZTdjNjIwMDlmMjgwMGRkIAAoATICZW46A05FQ0AASgBQAA%3D%3D&checkin=2023-07-30&checkout=2023-07-31&group_adults=2&no_rooms=1&group_children=0&sb_travel_purpose=leisure">NEC and Birmingham Airport</a>, which is a short taxi ride away. </P>
 							</div>
-						</div> <!-- End Col -->
-						<div class="row text-center">
-						
+						</div>
+
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Are you having an unplugged wedding?</h4>
-								<P>We’ve asked a professional photographer and videographer to capture the special moments on our day. We ask that you turn off your phones and cameras at the church, so that you can be fully present during our ceremony.Our beautiful images will be available after the wedding.
+								<P>We’ve asked a professional photographer and videographer to capture the special moments on our day. We ask that you turn off your phones and cameras at the church, so that you can be fully present during our ceremony.Our beautiful images will be available after the wedding.</P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
 
-						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How can I travel to the chuch?</h4>
-								<P>The church is located on Lichfield Road, in Sutton Coldfield. There is parking available at the Church and a further car park is available opposite the church at Bishop Vesey School on Boswell Road.
+								<P>The church is located on Lichfield Road, in Sutton Coldfield. There is parking available at the Church and a further car park is available opposite the church at Bishop Vesey School on Boswell Road.</P>
 								<P>If you are travelling by Train, Sutton Coldfield Train station is the nearest station, and is a 10 minute walk, or short taxi ride away. </P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
+					</div>
 
-						<div class="row text-center">
+					<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How can I travel to Hampton Manor?</h4>
-								<P>Located on the edge of the Warwickshire countryside, Hampton Manor is a short drive off the M42. The drive from the Church should take around 35 minutes. There is plenty of parking at Hampton Manor, where cars can be left overnight.
-									<p>If you are travelling by train, Hampton-in-Arden train station is a 5 minute walk from Hampton Manor. 
+								<P>Located on the edge of the Warwickshire countryside, Hampton Manor is a short drive off the M42. The drive from the Church should take around 35 minutes. There is plenty of parking at Hampton Manor, where cars can be left overnight.</P>
+									<p>If you are travelling by train, Hampton-in-Arden train station is a 5 minute walk from Hampton Manor. </p>
 							</div>
-						</div> <!-- End Col -->
+						</div>
 
-						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Should I bring a gift?</h4>
-								<P>Your presence at our wedding is the greatest gift of all. Please do not feel obligated to give anything else. However, should you feel inclined, we are very much looking forward to a honeymoon and any contribution towards that will always be sincerely appreciated.
+								<P>Your presence at our wedding is the greatest gift of all. Please do not feel obligated to give anything else. However, should you feel inclined, we are very much looking forward to a honeymoon and any contribution towards that will always be sincerely appreciated.</P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
 
 
-						<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>What is the schedule for the day?</h4>
-								<P>We are still working through the details of the day, and will update this site with a schedule and timetable of what to expect on the day. 
-									<P>
+								<P>We are still working through the details of the day, and will update this site with a schedule and timetable of what to expect on the day.</P>
 							</div>
-						</div> <!-- End Col -->
-
-						<div class="row text-center">
+						</div>
+					</div>
+					<div class="row text-center">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Are children invited?</h4>
 								<P>Unfortunately, due to the nature of the venue, we are not able to extend the invitations to you children.</P>
 							</div>
-						</div> <!-- End Col -->
+						</div>
+					</div>
 
 
 
