--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -45,10 +45,10 @@
 		<!-- END NAVBAR -->			
 		
 		<!-- START BANNER-SHOW -->
-			<section id="home" class="main_banner banner_bg">
+			<section id="home">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6 col-sm-12 col-xs-12">
+						<div class="col-md-6 col-sm-12 col-xs-12 banner_left">
 							<div class="banner_content">								
 								<h1 class="cd-headline clip">
 									<span class="fw_600">We Are</span>
@@ -62,8 +62,10 @@
 								<p>Welcome to our wedding website.
 							</div>
 						</div>
-						
-					</div>
+
+						<div class="col-md-6 col-sm-12 col-xs-12 banner_right">
+
+						</div>
 				</div>
 			</section>
 		<!-- END BANNER-SHOW -->
