--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-12 col-xs-12 banner_right">
+						<div class="col-md-6 col-sm-12 col-xs-12 banner_right">
 
 						</div>
 				</div>
@@ -200,7 +200,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Are you having an unplugged wedding?</h4>
-								<P>We’ve asked a professional photographer and videographer to capture the special moments on our day. We ask that you turn off your phones and cameras at the church, so that you can be fully present during our ceremony.Our beautiful images will be available after the wedding.</P>
+								<P>We’ve asked a professional photographer and videographer to capture the special moments on our day. We ask that you turn off your phones and cameras at the church, so that you can be fully present during our ceremony. Our images will be available after the wedding.</P>
 							</div>
 						</div>
 
