--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -184,7 +184,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>How should I RSVP?</h4>
-								<P>To RSVP, please send an mail to: <br><a href="mailto:wedding@amyandsimon.com">wedding@amyandsimon.com</a><br>To help our planning, please include any dietary requirements</P>
+								<P>To RSVP, please send an e-mail to: <br><a href="mailto:wedding@amyandsimon.com">wedding@amyandsimon.com</a><br>To help our planning, please include any dietary requirements</P>
 							</div>
 						</div>
 					</div>
