--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -152,8 +152,11 @@
 
 		<!-- START CTA -->
 			<section class="cta_section section_padding">
-				<div class="container">
-					<div class="row">
+			  <div class="container">
+			    <div class="row">
+			      <div class="col-12">
+			        <h1>Countdown to our Wedding</h1>
+			      </div>
 						<script>
 							// Set the date we're counting down to
 								var countDownDate = new Date("July 30, 2023 00:00:00").getTime();
@@ -185,8 +188,8 @@
 								    document.getElementById("countdown").innerHTML = "The wedding is over! We hope you had a wonderful day";
 								  }
 								}, 1000);
-
 						</script>
+						
 						<div id="countdown">
 						  <div class="countdown-box">
 						    <span class="countdown-value" id="days"></span>
