--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -305,7 +305,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="single-service wow fadeInLeft">
 								<h4>Are children invited?</h4>
-								<P>Unfortunately, due to the nature of the venue, we are not able to extend the invitations to you children.</P>
+								<P>Unfortunately, due to the nature of the venue, we are not able to extend the invitations to children.</P>
 							</div>
 						</div>
 					</div>
