--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/index.html
@@ -58,25 +58,15 @@
 										<b class="fw_300">Tying The Knot</b>
 									</span>
 								</h1>
-								<p>Welcome to our wedding website.
+								<p>Welcome to our wedding website, we can’t wait to celebrate our special day with you.</p><br>
+								<p> We’ve created this website as a convenient way to share all of the important details with you in the lead up to our wedding.</p><br>
+								<p>So have fun, take a look around and don’t forget to RSVP!</p><br>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 		<!-- END BANNER-SHOW -->
-
-		<!-- START BANNER-SHOW -->
-		<section id="home" class="invite_banner">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-sm-12 col-xs-12">
-						</div>
-					</div>
-				</div>
-			</section>
-		<!-- END BANNER-SHOW -->
-
 		
 		<!-- START ABOUT -->
 			<section id="about" class="gray_bg1 section_padding">
